# llawa

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/gpt-2/: CMakeLists.txt  gpt2.cpp  gpt2.py  gpt_weights.py  sampling.py
include/: llawa.h  llawa_ops.h
src/: CMakeLists.txt  llawa.c
tests/: CMakeLists.txt  test_acc.cpp  test_mat_mul.cpp  test_ops.cpp
